#  ▄▀▀▄ ▀▀▄  ▄▀▀▀▀▄   ▄▀▀▀▀▄      ▄▀▀▄ █
# █   ▀▄ ▄▀ █      █ █    █      █  █ ▄▀
# ▐     █   █      █ ▐    █      ▐  █▀▄
#       █   ▀▄    ▄▀     █         █   █
#     ▄▀      ▀▀▀▀     ▄▀▄▄▄▄▄▄▀ ▄▀   █
#     █                █         █    ▐
#     ▐                ▐         ▐
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dexie.py"
version = "0.0.10"
authors = [
    { name="Joseph Chiocchi", email="joe@yolk.cc" },
]
description = "A simple Dexie.Space API client"
dependencies = [
    "uplink",
    "base58",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/yyolk/dexie.py"
"Bug Tracker" = "https://github.com/yyolk/dexie.py/issues"

[tool.hatch.envs.test]
dependencies = [
    "pytest"
]

[tool.hatch.envs.test.scripts]
ptest = "pytest tests/*"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

